# yolo11n-ncnn-deploy

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: yolo_ncnn.h
models/yolo11n_hit_uav_ncnn/: model.ncnn.param
models/yolo11n_hit_uav_ncnn_auto_mixed/: model.ncnn.param  policy.json
results/: backend_comparison.csv  benchmark_ncnn_cpu.csv  benchmark_ncnn_fp32_cpu_rerun.csv  benchmark_ncnn_int8_cpu.csv  benchmark_ncnn_int8_mixed_head_cpu.csv  benchmark_ncnn_int8_mixed_output_cpu.csv  int8_calibration.table  int8_calibration_mixed_head_fp32.table  int8_calibration_mixed_output_fp32.table  mixed_precision_search.csv  quantization_accuracy.csv  quantization_summary.csv
scripts/: benchmark.py  build.sh  compare_backends.py  create_mixed_precision_tables.py  draw_architecture.py  evaluate_quantization.py  prepare_int8_calibration.py  prepare_validation_shapes.py  quantize_int8.sh  quantize_mixed_precision.sh  run_auto_mixed_demo.sh  run_demo.sh  run_int8_demo.sh  search_mixed_precision.py  summarize_quantization.py  validate_batch.sh
src/: main.cpp  postprocess.cpp  preprocess.cpp  yolo_ncnn.cpp
tests/: test_search_mixed_precision.py
